welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:1: error: Missing closing brace `}' assumed here
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
^